...
                          padding: const EdgeInsets.symmetric(
                            horizontal: 48,
                            vertical: 16,
                          ),
                        ),
                        child: Text(
                          'START GAME',
                          style: GoogleFonts.hanaleiFill(
                            fontSize: 20,
                            color: Colors.white,
                          ),
                        ),
                      )
...
